SFUSA/force-app/main/default/objects/Plant_Event__c/fields/Account__c.field-meta.xml
<CustomField>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Plant Events</relationshipLabel>
        <relationshipName>Plant_Events</relationshipName>
        <type>Lookup</type>
    </CustomField>