SFUSA/force-app/main/default/objects/Plant_Event__c/fields/Brand__c.field-meta.xml
<CustomField>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Knob Creek</fullName>
                </value>
                <value>
                    <fullName>El Tesoro</fullName>
                </value>
                <value>
                    <fullName>Makers Mark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>