SFUSA/force-app/main/default/objects/Plant_Event__c/fields/Case__c.field-meta.xml
<CustomField>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Plant Events</relationshipLabel>
        <relationshipName>Plant_Events</relationshipName>
        <type>Lookup</type>
    </CustomField>