SFUSA/force-app/main/default/objects/Plant_Event__c/fields/Date_Range_Label__c.field-meta.xml
<CustomField>
        <fullName>Date_Range_Label__c</fullName>
        <formula>Text(month(Start_Date__c))+"/"+Text(day(Start_Date__c))+"/"+Text(year(Start_Date__c)) + " - " + Text(month(End_Date__c))+"/"+Text(day(End_Date__c))+"/"+Text(year(End_Date__c))</formula>
        <label>Date Range Label</label>
        <type>Text</type>
    </CustomField>