SFUSA/force-app/main/default/objects/Plant_Event__c/fields/End_Time__c.field-meta.xml
<CustomField>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </CustomField>