SFUSA/force-app/main/default/objects/Plant_Event__c/fields/hasTripHappened__c.field-meta.xml
<CustomField>
        <fullName>hasTripHappened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasTripHappened</label>
        <type>Checkbox</type>
    </CustomField>