SFUSA/force-app/main/default/objects/Plant_Event__c/fields/Initiator_Email__c.field-meta.xml
<CustomField>
        <fullName>Initiator_Email__c</fullName>
        <formula>Initiator__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiator Email</label>
        <type>Text</type>
    </CustomField>