SFUSA/force-app/main/default/objects/Plant_Event__c/fields/isTripToday__c.field-meta.xml
<CustomField>
        <fullName>isTripToday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTripToday</label>
        <type>Checkbox</type>
    </CustomField>