SFUSA/force-app/main/default/objects/Plant_Event__c/fields/Number_of_Attendees__c.field-meta.xml
<CustomField>
        <fullName>Number_of_Attendees__c</fullName>
        <label>Number of Attendees</label>
        <summaryForeignKey>Attendee__c.Plant_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </CustomField>