SFUSA/force-app/main/default/objects/Plant_Event__c/fields/Plant__c.field-meta.xml
<CustomField>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clermont</fullName>
                </value>
                <value>
                    <fullName>Loretto</fullName>
                </value>
                <value>
                    <fullName>La Alteña Distillery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>