SFUSA/force-app/main/default/objects/Plant_Event__c/fields/Scheduled_Date__c.field-meta.xml
<CustomField>
        <fullName>Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </CustomField>