SFUSA/force-app/main/default/objects/Plant_Event__c/fields/Start_Date__c.field-meta.xml
<CustomField>
        <fullName>Start_Date__c</fullName>
        <description>Start date of a program that is only open certain times of the year</description>
        <label>Start Date</label>
        <type>Date</type>
    </CustomField>