SFUSA/force-app/main/default/objects/Plant_Event__c/fields/Start_Time__c.field-meta.xml
<CustomField>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </CustomField>