SFUSA/force-app/main/default/objects/Plant_Event__c/fields/Subject__c.field-meta.xml
<CustomField>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>