SFUSA/force-app/main/default/objects/Plant_Event__c/fields/Time_of_Day__c.field-meta.xml
<CustomField>
        <fullName>Time_of_Day__c</fullName>
        <label>Time of Day</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>