SFUSA/force-app/main/default/objects/Plant_Event__c/fields/Time_Slot__c.field-meta.xml
<CustomField>
        <fullName>Time_Slot__c</fullName>
        <label>Time Slot</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>09:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>