SFUSA/force-app/main/default/objects/Plant_Event__c/fields/Type__c.field-meta.xml
<CustomField>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trip</fullName>
                    <default>true</default>
                    <label>Trip</label>
                </value>
                <value>
                    <fullName>Blackout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>