SFUSA/force-app/main/default/objects/Plant_Event__c/fields/Waiting_Options__c.field-meta.xml
<CustomField>
        <fullName>Waiting_Options__c</fullName>
        <label>Waiting Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cocktail Bar</fullName>
                </value>
                <value>
                    <fullName>Tour after selection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>