SFUSA/force-app/main/default/objects/Plant_Event__c/recordTypes/Knob_Creek.recordType-meta.xml
<RecordType>
        <fullName>Knob_Creek</fullName>
        <active>true</active>
        <label>Knob Creek</label>
    </RecordType>