SFUSA/force-app/main/default/objects/Plant_Event__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Plant__c</columns>
        <columns>Brand__c</columns>
        <columns>Time_of_Day__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Subject__c</columns>
        <columns>Scheduled_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </ListView>